Fix: change info container font style overflow
Change font style from rem to vw and it is now responsive

--- a/assets/style.css
+++ b/assets/style.css
@@ -397,7 +397,7 @@ body {
 }
 
 .infoContainerAfterClick{
-  font-size: 4rem;
+  font-size: 3vw;
 }
 
 @media screen and (max-width: 800px) {
